--- a/src/app/iam/pages/sign-in/sign-in.component.html
+++ b/src/app/iam/pages/sign-in/sign-in.component.html
@@ -5,7 +5,7 @@
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <p>
           <mat-form-field>
-            <input type="email" matInput placeholder="Email" formControlName="email" class="input-field">
+            <input type="text" matInput placeholder="Username" formControlName="username" class="input-field">
           </mat-form-field>
         </p>
 
