feat: update not founded page and add new image

--- a/src/app/shared/components/main-layout/main-layout.component.html
+++ b/src/app/shared/components/main-layout/main-layout.component.html
@@ -12,8 +12,8 @@
           <mat-icon class="icon-display" aria-hidden="true">account_circle</mat-icon>
         </button>
         <ul class="profile-dropdown">
-          <li><a href="#">My Profile</a></li>
-          <li><a href="#">Settings</a></li>
+          <li><a routerLink="profile">My Profile</a></li>
+          <li><a routerLink="settings">Settings</a></li>
           <li><a style="cursor: pointer" (click)="logout()">Log Out</a></li>
         </ul>
       </div>
