--- a/src/app/public/pages/not-found/not-found.component.html
+++ b/src/app/public/pages/not-found/not-found.component.html
@@ -1,9 +1,9 @@
 <div class="error-container">
-  <h1>404 Not Found</h1>
-  <h2>It’s Empty Here</h2>
+  <h1>404 Nos pone 20 o volamos en 20</h1>
+  <h2>No hay nada por aquí</h2>
   <p>
-    Looks like this page can’t be found. Maybe it was moved or renamed.
+    Parece que esta página no se encuentra. Tal vez fue movida o renombrada.
   </p>
-  <button mat-button class="back-button" (click)="goHome()">Back to Homepage</button>
-  <img src="./assets/not-found-banner.svg" alt="404 Robot" class="error-image">
+  <button class="back-button" (click)="goHome()">Regresar al inicio</button>
+  <img src="./assets/meme.png" alt="404 Robot" class="error-image">
 </div>
