feat: add icon to delete task and emit the event to delete

--- a/src/app/board/pages/board/board.component.html
+++ b/src/app/board/pages/board/board.component.html
@@ -21,6 +21,7 @@
             [task]="task"
             (click)="openTaskDialog(task, false)"
             cdkDrag
+            (delete)="deleteTask($event)"
             class="kanban-task-item">
           </app-task-item>
         }
@@ -41,6 +42,7 @@
             [task]="task"
             (click)="openTaskDialog(task, false)"
             cdkDrag
+            (delete)="deleteTask($event)"
             class="kanban-task-item">
           </app-task-item>
         }
@@ -61,6 +63,7 @@
             [task]="task"
             (click)="openTaskDialog(task, false)"
             cdkDrag
+            (delete)="deleteTask($event)"
             class="kanban-task-item">
           </app-task-item>
         }
