--- a/src/app/task/components/task-item/task-item.component.html
+++ b/src/app/task/components/task-item/task-item.component.html
@@ -1,7 +1,10 @@
 <div class="task-item" matRipple>
   <div class="task-header">
     <h4 class="task-title">{{ task.title }}</h4>
-    <span class="task-status task-status-{{ status() }}">{{ task.status }}</span>
+    <div class="task-controls">
+      <span class="task-status task-status-{{ status() }}">{{ task.status }}</span>
+      <button class="delete-button" (click)="deleteTask($event)">✖</button>
+    </div>
   </div>
   <p class="task-description">{{ task.description }}</p>
 </div>
